--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
 
         // 3.创建新的vnode
         setTimeout(() => {
-            const vnode1 = h('div', { class: "coderwhy", id: "aaa" }, [
+            const vnode1 = h('div', { class: "coco", id: "enen" }, [
                 h("h2", null, "呵呵呵"),
-                h("button", { onClick: function () { } }, "-1")
             ]);
             patch(vnode, vnode1);
         }, 2000)
