--- a/index.html
+++ b/index.html
@@ -11,23 +11,28 @@
 <body>
     <div id="app"></div>
     <script src="./renderer.js"></script>
+    <script src="./reactive.js"></script>
+    <script src="./index.js"></script>
     <script>
-        // 通过h函数创建一个VNode
-        const vnode = h('div', { class: 'haha' }, [ // vdom
-            h('h2', null, '你好啊'),
-            h('button', null, '点我加加')
-        ])
+        const App = {
+            data: reactive({
+                counter: 0
+            }),
+            render() {
+                return h('div', null, [
+                    h('h2', null, `当前计数：${this.data.counter}`),
+                    h('button', {
+                        onClick: () => {
+                            this.data.counter++
+                            console.log(this.data.counter);
+                        }
+                    }, '+1')
+                ])
+            }
+        }
 
-        // 通过mount函数，将VNode挂载到 div#app 上
-        mount(vnode, document.querySelector('#app'))
-
-        // 3.创建新的vnode
-        setTimeout(() => {
-            const vnode1 = h('div', { class: "coco", id: "enen" }, [
-                h("h2", null, "呵呵呵"),
-            ]);
-            patch(vnode, vnode1);
-        }, 2000)
+        const app = createApp(App)
+        app.mount('#app')
     </script>
 </body>
 
